# calculator_app_in_rust

./: Cargo.toml  README.md
src/: main.rs
src/adapters/http/: calculator_http_adapter.rs  mod.rs
src/app/: calculator_app.rs  mod.rs
src/domain/: calculator_domain.rs  mod.rs  models.rs
src/infrastructure/: actix_web_server.rs  mod.rs
