[package]
name = "calculator_app_in_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web frontend
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"

# Backend server
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for frontend
gloo-net = "0.5"

# Async and state management
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Required by dioxus
wasm-bindgen = "0.2"
